After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786327 - Inconsistent margins around headings
Inconsistent margins around headings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
git master
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-15 15:05 UTC by Allan Day
Modified: 2017-08-16 18:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch: power - harmonize header positioning (1.44 KB, patch)
2017-08-15 15:06 UTC, Allan Day
committed Details | Review

Description Allan Day 2017-08-15 15:05:34 UTC
It looks like the horizontal margins have been removed from some headings but not others. For example, "Batteries" has a slight indent but "Power Saving" doesn't.
Comment 1 Allan Day 2017-08-15 15:06:40 UTC
Created attachment 357637 [details] [review]
patch: power - harmonize header positioning
Comment 2 Georges Basile Stavracas Neto 2017-08-16 18:43:43 UTC
Review of attachment 357637 [details] [review]:

Typo in the commit message ("headings" instead of "headingns")
Comment 3 Georges Basile Stavracas Neto 2017-08-16 18:44:55 UTC
Pushed the patch with corrected commit message. Thanks!

Attachment 357637 [details] pushed as e29e97a9a - power: harmonize header positioning